Fix scroll bar on account signup/signin/forgot password pages.
Note that I started trying to get rid of the custom section
container stuff and just use Bootstrap but it was too much work.
This just positions the footer at the bottom using this example
bootstrap technique: https://getbootstrap.com/docs/4.1/examples/sticky-footer/

It also makes the logo crisp and not distorted. No clue where that inline
blob came from.

--- a/app/assets/stylesheets/layouts/accounts.scss
+++ b/app/assets/stylesheets/layouts/accounts.scss
@@ -129,6 +129,9 @@ section:after {
 
 #footer_bottom.braven_section {
   background: #262426;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 #footer_menu .footer_widget {
@@ -213,7 +216,7 @@ section:after {
 }
 
 .footer_widget li {
-  padding: 5px 0;
+  padding: 0;
 }
 
 .footer_widget a {
